# jepa_first_study

./: .gitignore  .pre-commit-config.yaml  README.md  experiment_bad_code.py  inspect_model.py  main.py  mlp_baseline.py  pyproject.toml  run.py
.github/workflows/: ci.yml
experiments/: vjepa_demo.yaml
forecasting/: compare_forecasts.py  forecast_jepa.py  forecast_mlp_baseline.py
src/: config.py  dataset.py  masking.py  models.py  models_vjepa.py  runner.py  trainer.py  trainer_vjepa.py  visualization.py
src/utils/: __init__.py  config_io.py  experiment.py
tests/: test_config.py  test_dataset.py  test_models.py
