[project]
name = "jepa"
version = "0.1.0"
description = "JEPA for Dynamics Forecasting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "imageio[ffmpeg]",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.14.10",
]
